--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,16 +5,20 @@
 	<meta name="viewport" content="width=device-width, initil-scale=1">
     <title>To-Do lists</title>
 	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="/static/base.css" type="text/css">
 </head>
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="text-center">
-				<h1>{% block header_text %}{% endblock %}</h1>
-			    <form method="POST" action="{% block form_action %}{% endblock %}">
-			        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-			        {% csrf_token %}
-			    </form>
+			<div class="col-md-6 col-md-offset-3 jumbotron">
+				<div class="text-center">
+					<h1>{% block header_text %}{% endblock %}</h1>
+				    <form method="POST" action="{% block form_action %}{% endblock %}">
+				        <input name="item_text" id="id_new_item" class="form-control input-lg"
+						placeholder="Enter a to-do item" />
+				        {% csrf_token %}
+				    </form>
+				</div>
 			</div>
 		</div>
 		<div class="row">
